--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables", "chevron", "cards", "carouselSwipper", "adn", "borderEfect";
+@import "variables", "chevron", "cards", "carouselSwipper", "adn", "borderEfect", "circle";
 *{
     margin: 0;
     padding: 0;
@@ -219,13 +219,77 @@ header{
                 p{
                     text-align: center;
                     color: $color_gris_claro;
-                    font-family: $letra__secundaria;
+                    font-family: $letra__principal;
                     @include margin__Espaciado(1em,1em)
                 }
             }
         }
     }
-
+    .nosotros_mision_container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 90%;
+        @include margin__Espaciado(1em,1em);
+        .nosotros_mision_title{
+            @include margin__Espaciado(2em,1em);
+            width: 100%;
+            text-align: center;
+            color: $color_naranja_cohete;
+            font-family: $letra__principal;
+        }
+        .nosotros_mision_paragraph{
+            width: 60%;
+            text-align: left;
+            color: $color_gris_claro;
+            font-family: $letra__secundaria; 
+            @include margin__Espaciado(1em,1em);
+        }
+        .nosotros_mision_hashtag_container{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            .hashtagRocket{
+                width: 80px;
+                height: 80px;
+            }
+            .nosotros_mision_hashtag{
+                font-family: $letra__principal;
+                color: $color_gris_claro;
+                text-align: left;
+                margin: 1em;
+                span{
+                    font-family: $letra__secundaria
+                }
+            }
+        }
+    }
+    .beneficios_container{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        .beneficio_content{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1em;
+            overflow: hidden;
+            //width: 100px;
+            //height: 50px;
+            position: relative;
+            p{
+                text-align: center;
+                color: $color_gris_claro;
+                font-family: $letra__principal;
+                @include margin__Espaciado(1em,1em)
+            }
+        }
+    }
 }
 .section_servicios{
     @include secciones;
@@ -241,6 +305,64 @@ header{
         width: 100%;
         text-align: center;
         @include margin__Espaciado(2em,1em);
+    }
+    .servicio_principal_container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        .containerStar{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            .servicioPrincipal_title{
+                color: $color_naranja_cohete;
+                text-align: center;
+                margin: 1em;
+            }
+            .servicioPrincipal_star{
+                width: 50px;
+                height: 50px;
+            }
+        }
+        .caminoDigital_Title{
+            color: $color_celeste_oscuro;
+            width: 100%;
+            text-align: center;
+            font-family: $letra__principal;
+            @include margin__Espaciado(1em,1em)
+        }
+        .caminoDigital_paragraph{
+            text-align: left;
+            width: 60%;
+            color: $color_gris_claro;
+            font-family: $letra__secundaria;
+            @include margin__Espaciado(1em,1em)
+        }
+        .impulsos_container{
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            .impulsos_content{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 1em;
+                overflow: hidden;
+                //width: 100px;
+                //height: 50px;
+                position: relative;
+                p{
+                    text-align: center;
+                    color: $color_gris_claro;
+                    font-family: $letra__principal;
+                    @include margin__Espaciado(1em,1em)
+                }
+            }
+        }
     }
     .container_content_impulso{
         display: flex;
@@ -296,6 +418,13 @@ header{
                 @include margin__Espaciado(1em,1em);
             }
         }
+    }
+    .carousel_title{
+        color: $color_naranja_cohete;
+        font-family: $letra__principal;
+        width: 100%;
+        text-align: center;
+        @include margin__Espaciado(2em,2em);
     }
 }
 .section_contacto{
@@ -561,67 +690,56 @@ footer{
     }
 }
 //Responsive
-@media screen and (max-width: 320px){
-
-}
-@media screen and (max-width: 768px){
-    .socialMedia_anchord i, .socialMedia_anchord img{
-        margin-bottom: 1em;
-    }
-    .section_servicios{
-        .container_content_impulso{
-            flex-direction: column;
-            width: 100%;
-            .container_impulso_speach{
-                .impulso_paragraph{
-                    text-align: center;
-                }
-            }
-        }
-    }
+@media screen and (max-width: 1100px) {
     .section_nosotros{
-        article{
-            .contenedor_nosotros_quienesSomos,.contenedor_nosotros_Speach{
-                width: 90%;
-            }
-        }
-        .nosotros_valores_title_container{
-            .nosotros_valores_paragraph{
-                width: 90%;
-            }
-        }
-        //adn valores
-        .nosotros_valores_container{
+        .beneficios_container{
             flex-direction: row;
-            flex-wrap: nowrap;
-            .valores_container{
-                flex-direction: column;
-                .valores_content{
-                    @include margin__Espaciado(1em,1em);
-                    min-width: 130px;
-                }
+            flex-wrap: wrap;
+            .beneficio_content{
+                width: 40%;
+                margin: 1em;
             }
+        }
+    }
+}
+@media screen and (max-width: 998px){
+    .section_nosotros{
+        .contenedor_nosotros_quienesSomos{
+            width: 80%;
+        }
+        .contenedor_nosotros_Speach{
+            width: 80%;
         }
     }
     .section_contacto{
-        .contacto_redesUbicacion{
+        form{
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            .containerRedes{
+            h3{
                 width: 100%;
-                .contacto_redes{
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    width: 80%;
+                text-align: center;
+                @include margin__Espaciado(1em,1em);
+            }
+        }
+        .formulario_contenedor_datos{
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            @include margin__Espaciado(1em,1em);
+        }
+        .formulario_contenedor_textarea{
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+            @include margin__Espaciado(1em,1em);
+            .contenedor_btn_formulario{
+                .btn_formulario{
+                    width: 25%;
                 }
             }
-            .container_ubicacion{
-                width: 100%;
-            }          
         }
     }
-
 }
 @media screen and (max-width: 900px) {
     header nav{
@@ -690,13 +808,6 @@ footer{
     }
 
 }
-@media screen and (min-width: 768px){
-    /*Footer Media +768*/ 
-    .footer__logo{
-        width: calc(7em + 7vw);
-    }
-    /*CIerra Footer Media +768*/
-}
 @media screen and (max-width: 920px){
     .section_contacto{
         .formulario_contenedor_textarea{
@@ -708,44 +819,122 @@ footer{
         }
     }
 }
-@media screen and (max-width: 998px){
-    .section_nosotros{
-        .contenedor_nosotros_quienesSomos{
-            width: 80%;
-        }
-        .contenedor_nosotros_Speach{
-            width: 80%;
-        }
+@media screen and (max-width: 768px){
+    .socialMedia_anchord i, .socialMedia_anchord img{
+        margin-bottom: 1em;
     }
-    .section_contacto{
-        form{
+    .section_servicios{
+        .container_content_impulso{
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            h3{
-                width: 100%;
-                text-align: center;
-                @include margin__Espaciado(1em,1em);
+            width: 100%;
+            .container_impulso_speach{
+                .impulso_paragraph{
+                    text-align: left;
+                }
             }
         }
-        .formulario_contenedor_datos{
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-            @include margin__Espaciado(1em,1em);
-        }
-        .formulario_contenedor_textarea{
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-            @include margin__Espaciado(1em,1em);
-            .contenedor_btn_formulario{
-                .btn_formulario{
-                    width: 25%;
+        .servicio_principal_container{
+            .caminoDigital_paragraph{
+                width: 90%;
+            }
+            .impulsos_container{
+                flex-wrap: wrap;
+                .impulsos_content{
+                    min-width: 30%;
+                    margin: 1em;
                 }
             }
         }
     }
+    .section_nosotros{
+        article{
+            .contenedor_nosotros_quienesSomos,.contenedor_nosotros_Speach{
+                width: 90%;
+            }
+        }
+        .nosotros_valores_title_container{
+            .nosotros_valores_paragraph{
+                width: 90%;
+            }
+        }
+        //adn valores
+        .nosotros_valores_container{
+            flex-direction: row;
+            flex-wrap: nowrap;
+            .valores_container{
+                flex-direction: column;
+                .valores_content{
+                    @include margin__Espaciado(1em,1em);
+                    min-width: 130px;
+                }
+            }
+        }
+        .nosotros_mision_container{
+            .nosotros_mision_paragraph{
+                width: 90%;
+            }
+        }
+    }
+    .section_contacto{
+        .contacto_redesUbicacion{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .containerRedes{
+                width: 100%;
+                .contacto_redes{
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                    width: 80%;
+                }
+            }
+            .container_ubicacion{
+                width: 100%;
+            }          
+        }
+    }
+}
+@media screen and (max-width: 468px) {
+    .section_nosotros{
+        .beneficios_container{
+            flex-direction: column;
+            .beneficio_content{
+                width: 50%;
+                margin: 1em;
+            }
+        }
+    }
+    .section_servicios{
+        .servicio_principal_container{
+            .containerStar{
+                flex-direction: column;
+            }
+            .impulsos_container{
+                flex-direction: column;
+                .impulsos_content{
+                    min-width: 80%;
+                }
+            }   
+        }
+    }
+}
+@media screen and (max-width: 320px) {
+    .section_nosotros{
+        .beneficios_container{
+            flex-direction: column;
+            .beneficio_content{
+                width: 80%;
+                margin: 1em;
+            }
+        }
+    }
+}
+@media screen and (min-width: 768px){
+    /*Footer Media +768*/ 
+    .footer__logo{
+        width: calc(7em + 7vw);
+    }
+    /*CIerra Footer Media +768*/
 }
 @media screen and (min-width: 1200px){
 
